--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>Network | Static smooth curves</title>
 
-  <script type="text/javascript" src="http://visjs.org/dist/vis.js"></script>
-  <link href="http://visjs.org/dist/vis-network.min.css" rel="stylesheet" type="text/css" />
+  <script type="text/javascript" src="vis.js"></script>
+  <link href="vis-network.min.css" rel="stylesheet" type="text/css" />
 
   <style type="text/css">
     #mynetwork {
