--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
     #description {
     	font: normal 12px "Open Sans",sans-serif;	
     	margin-top: 0px;
-    	height: 10em;
+    	
     }
 
     #general {
 
     }
+
+    iframe { height: 30em; }
 
   </style>
    
@@ -122,13 +124,16 @@
 </div>
 <div id="general">
 	<h3>Metrics</h3>
+	<!--
 	<p>To exercise the full benefits of the new asset pipeline all importers must be "pure". This means that importing an asset should act like a pure function taking the asset, platform and other declared dependencies as input and from that always generate the same output: The imported asset.
 	</p>
 	<p>This is not the case today and below is a listing of our current internal importers and their status in the migration to become pure importers.
 	</p>
 	<div id="importers">
-<iframe src="https://docs.google.com/a/unity3d.com/spreadsheets/d/e/2PACX-1vT_-FCuUcWK9uxNmQ4d5qLqPmveZ7djxBMbsJtbpOF8_G_VytJFY2UAkB1pZt_RmqbNtQc9ijkJfwC3/pubhtml?gid=1173977023&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+	<iframe width="600px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT_-FCuUcWK9uxNmQ4d5qLqPmveZ7djxBMbsJtbpOF8_G_VytJFY2UAkB1pZt_RmqbNtQc9ijkJfwC3/pubhtml?gid=987729035&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false"></iframe>
+
 	</div>
+	-->
 	<div>
 	</div>
 </div>
